@@ -13,6 +13,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix internal error on unique casez with --assert, bug1117. [Enzo Chi]
 
+****  Fix bad code when tracing array of structs, bug1122. [Andrew Bardsley]
+
 
 * Verilator 3.890 2016-11-25
 
